# k4a_cuda

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  k4a_cuda.cu  k4a_cuda.cuh
src/win/: CMakeLists.txt  dllmain.cpp
tests/: CMakeLists.txt  k4a_cuda_dll_ut.cpp  k4a_cuda_ut.cpp
